base: Add three-fingers-swipe to screenshot [1/2]
The feature is ported from Oppo ColorOS.
With the options on, users can swipe down
on the screen to have a screenshot.

original smali port by: wuxianlin

Syberia: forward port to 10

@jhonboy121:
    * simplified conditionals and use a lambda instead of instantiating an anonymous inner class for Callback
    * make three finger swipe distance overlayable
    * added setting value to backup array

Change-Id: I5e0de37ab79ef97dbb4fcf967e57158ef9539811
Signed-off-by: DennySPB <dennyspb@gmail.com>
Signed-off-by: Arghya Chanda <arghyac35@gmail.com>
Signed-off-by: SagarMakhar <sagarmakhar@gmail.com>
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/core/res/res/values/krypton_symbols.xml
+++ b/core/res/res/values/krypton_symbols.xml
@@ -121,4 +121,6 @@
 
     <!-- Cycle through ringer modes -->
     <java-symbol type="string" name="volume_dialog_ringer_guidance_normal" />
+
+    <java-symbol type="integer" name="config_threeFingerSwipeDistance" />
 </resources>
