--- a/core/res/res/values/krypton_config.xml
+++ b/core/res/res/values/krypton_config.xml
@@ -79,4 +79,7 @@
     <!-- The list of components which should be forced to be enabled. -->
     <string-array name="config_forceEnabledComponents" translatable="false">
     </string-array>
+
+    <!-- Minimum distance to swipe down with three fingers to trigger screenshot action -->
+    <integer name="config_threeFingerSwipeDistance">350</integer>
 </resources>
