--- a/core/res/res/values/krypton_config.xml
+++ b/core/res/res/values/krypton_config.xml
@@ -2,4 +2,7 @@
     <!-- Device key handlers -->
     <string-array name="config_deviceKeyHandlerLibs" translatable="false"></string-array>
     <string-array name="config_deviceKeyHandlerClasses" translatable="false"></string-array>
+
+    <!-- Vendor platform signatures --> 
+    <string-array name="config_vendorPlatformSignatures" translatable="false"></string-array>
 </resources>
