--- a/core/res/res/values/krypton_symbols.xml
+++ b/core/res/res/values/krypton_symbols.xml
@@ -2,4 +2,7 @@
     <!-- Device key handlers -->
     <java-symbol type="array" name="config_deviceKeyHandlerLibs" />
     <java-symbol type="array" name="config_deviceKeyHandlerClasses" />
+
+    <!-- Vendor platform signatures -->
+    <java-symbol type="array" name="config_vendorPlatformSignatures" />
 </resources>
