SystemUI: allow changing the length of gesture navbar[1/2]
* forward ported from 11 and improved a lot by delegating all the dirty work to controllers and using LayoutParams for changing the width instead of screwing around in onDraw.

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/packages/SystemUI/res/values/krypton_dimens.xml
+++ b/packages/SystemUI/res/values/krypton_dimens.xml
@@ -36,4 +36,9 @@
 
     <!-- QQS Brightness slider -->
     <dimen name="quick_qs_brightness_margin_top">24dp</dimen>
+
+    <!-- Additional gesture navbar lengths -->
+    <dimen name="navigation_home_handle_width_medium">110dp</dimen>
+    <dimen name="navigation_home_handle_width_long">140dp</dimen>
+
 </resources>
