--- a/packages/SystemUI/res/values/krypton_dimens.xml
+++ b/packages/SystemUI/res/values/krypton_dimens.xml
@@ -41,4 +41,6 @@
     <dimen name="navigation_home_handle_width_medium">110dp</dimen>
     <dimen name="navigation_home_handle_width_long">140dp</dimen>
 
+    <dimen name="screenrecord_dot_size">48dp</dimen>
+
 </resources>
