--- a/packages/SystemUI/res/values/krypton_dimens.xml
+++ b/packages/SystemUI/res/values/krypton_dimens.xml
@@ -33,4 +33,7 @@
     <dimen name="network_traffic_unit_text_default_size">8sp</dimen>
     <item name="network_traffic_rate_text_default_scale_factor" format="float" type="dimen">1.5</item>
     <item name="network_traffic_line_spacing_multiplier" format="float" type="dimen">0.8</item>
+
+    <!-- QQS Brightness slider -->
+    <dimen name="quick_qs_brightness_margin_top">24dp</dimen>
 </resources>
