--- a/packages/SystemUI/res/values/krypton_dimens.xml
+++ b/packages/SystemUI/res/values/krypton_dimens.xml
@@ -16,13 +16,17 @@
 <resources>
 
     <!-- AlertSlider -->
-    <dimen name="alertslider_bg_radius">24dp</dimen>
+    <!-- Absolute distance of the top position of alert slider from the top of the display -->
+    <integer name="alert_slider_top_y">0</integer>
+
+    <!-- Absolute width of the alert slider -->
+    <integer name="alertslider_width">0</integer>
+
+    <dimen name="alertslider_dialog_minradius">24dp</dimen>
     <dimen name="alertslider_dialog_minheight">48dp</dimen>
     <dimen name="alertslider_dialog_minwidth">108dp</dimen>
-    <dimen name="alertslider_padding_inner_edge">15dp</dimen>
-    <dimen name="alertslider_padding_inner_top">15dp</dimen>
-    <dimen name="alertslider_text_fontsize">14sp</dimen>
-    <dimen name="alertslider_step_size">11dp</dimen>
+    <dimen name="alertslider_textsize">14sp</dimen>
+    <dimen name="alertslider_padding">15dp</dimen>
 
     <!-- StatusBar burn-in protection -->
     <dimen name="horizontal_max_shift">3.0dp</dimen>
