--- a/packages/SystemUI/res/values/krypton_config.xml
+++ b/packages/SystemUI/res/values/krypton_config.xml
@@ -24,6 +24,9 @@
     <!-- Whether device has hardware alertslider -->
     <bool name="config_hasAlertSlider">false</bool>
 
+    <!-- Whether alertslider is on the left edge of the device -->
+    <bool name="config_alertSliderOnLeft">false</bool>
+
     <!-- StatusBar burn-in protection -->
     <bool name="config_statusBarBurnInProtection">true</bool>
     <integer name="config_shift_interval">60</integer>
